# license_panel

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  pyproject.toml
infra/: Dockerfile  docker-compose.yaml  example.config.toml  init.sql
src/: config.py
src/application/: errors.py
src/application/schemas/: user.py
src/application/services/: auth.py  provider.py
src/application/utils/: export.py
src/infra/: logging.py
src/infra/database/: litestar_config.py  provider.py  transaction_manager.py
src/infra/database/migrations/: env.py
src/infra/database/migrations/versions/: 2025-07-05_initial_bb4798e94cd1.py  2025-07-05_isadmin_added_6712945842ba.py  2025-07-05_new_entities_782ef9638e0f.py
src/infra/database/repository/: key.py  product.py  product_activation.py  user.py
src/infra/database/tables/: __init__.py  base.py  key.py  product.py  product_activation.py  user.py
src/main/: __init__.py  di.py  web.py
src/presentation/: handling.py  setup.py
src/presentation/admin/: __init__.py
src/presentation/admin/product/: __init__.py
src/presentation/auth/: __init__.py  auth.py
src/usecase/: provider.py
src/usecase/auth/: is_admin.py  login.py  register.py
